# optimal-portfolio

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml  render.yaml
backend/: .coverage  .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py  ratelimit.py
backend/app/api/: deps.py
backend/app/assistant/: client.py  service.py
backend/app/auth/: gating.py  plans.py  repository.py  supabase.py
backend/app/backtest/: analytics.py  engine.py  repository.py  service.py  strategies.py  stress.py
backend/app/behavioral/: service.py  simulator.py
backend/app/billing/: repository.py  service.py
backend/app/data/: cache.py  fmp.py  provider.py  repository.py  returns.py  sample.py  sectors.py  universe.py
backend/app/db/: models.py  session.py
backend/app/education/: content.py  repository.py  service.py
backend/app/factors/: decomposition.py
backend/app/game/: rooms.py  service.py
backend/app/invest/: client.py  market.py  simulator.py
backend/app/jobs/: manager.py  sweep.py
backend/app/observability/: metrics.py  sentry.py
backend/app/optimizer/: black_litterman.py  hrp.py  (+5 more)
backend/tests/: conftest.py  test_analytics.py  test_api.py  test_backtest.py  test_behavior_gap.py  test_billing.py  test_constraints.py  test_education.py  test_frontier.py  test_game.py  test_gating.py  test_invest.py  test_jobs.py  test_market.py  test_optimizer.py  test_portfolios.py  test_profiles.py  test_provider_cache.py  test_provider_errors.py  test_returns.py  test_risk_models.py  test_stretch.py
(+198 files in other folders)
