[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "optimal-portfolio-backend"
version = "0.1.0"
description = "Convex portfolio optimization API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "cvxpy>=1.5",
    "numpy>=1.26",
    "pandas>=2.2",
    "certifi>=2024.0.0",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.8",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "greenlet>=3.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "reportlab>=4.0",
    "sentry-sdk[fastapi]>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["B008", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
